--- a/Arendt_htm.html
+++ b/Arendt_htm.html
@@ -11,12 +11,12 @@
 #wrapper #generated-toc-clone,#wrapper #mkreplaced-toc,#wrapper #generated-toc-clone ul,#wrapper #mkreplaced-toc ul{list-style-position:inside}#wrapper #generated-toc-clone li.missing,#wrapper #mkreplaced-toc li.missing{list-style-type: none!important}#wrapper #generated-toc-clone,#wrapper #mkreplaced-toc{list-style-type: upper-roman}#wrapper #generated-toc-clone>li>ul,#wrapper #mkreplaced-toc>li>ul {list-style-type: decimal}#wrapper #generated-toc-clone>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul{list-style-type: decimal-leading-zero}#wrapper #generated-toc-clone>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul{list-style-type: lower-greek}#wrapper #generated-toc-clone>li>ul>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul>li>ul{list-style-type: disc}#wrapper #generated-toc-clone>li>ul>li>ul>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul>li>ul>li>ul{list-style-type: square}#wrapper #generated-toc-clone,#wrapper #mkreplaced-toc{list-style-position:outside!important;margin-left:2rem;}
 </style>
 
-<style id="mkprintstyles">@media print{
-html,body,#wrapper{font-size:10pt}
+<style id="mkprintstyles">@media print{#wrapper #generated-toc-clone,#generated-toc{display:none!important}
+html,body,#wrapper{font-size:10pt!important}
 }
 </style>
 
-<style>#wrapper { max-width:660px; margin:0 auto }</style>
+<style>#wrapper { max-width:840px; margin:0 auto }</style>
 </head>
 <body class="normal">
   <div id="wrapper">
@@ -26,20 +26,20 @@ html,body,#wrapper{font-size:10pt}
 
 <p>° 1906, Hannover - † 1975, New York.</p>
 
-<p>Het BBC Radio 4 programma <em>In our time</em> spendeerde een aflevering aan Hannah Arendt in februari 2017. Zoals steeds nodigt Melvyn Bragg enkele interessante academici uit.<a href="#fn:1" id="fnref:1" title="see footnote" class="footnote">1</a><br/>
+<p>Het BBC Radio 4 programma <em>In our time</em> spendeerde een aflevering aan Hannah Arendt in februari 2017. Zoals steeds nodigt Melvyn Bragg enkele interessante academici uit.<a href="#fn:1" id="fnref:1" title="see footnote" class="footnote">[1]</a><br/>
   Een reden om één en ander over haar op te zoeken en hieronder een aantal zaken neer te pennen.</p>
 
 <blockquote>
-<p>It is hard to name another thinker of the twentieth century more sought after as a guide to the dilemmas of the twenty-first.<a href="#fn:2" id="fnref:2" title="see footnote" class="footnote">2</a></p>
+<p>It is hard to name another thinker of the twentieth century more sought after as a guide to the dilemmas of the twenty-first.<a href="#fn:2" id="fnref:2" title="see footnote" class="footnote">[2]</a></p>
 </blockquote>
 
 <p>Arendt schreef over een breed gamma aan onderwerpen: liefde &amp; Sint Augustinus, totalitarisme, geestesleven - steeds verbonden door een focus op politiek.<br/>
-  Ze verzette zich tegen de noemer &#8216;politiek filosoof&#8217;, omdat het een vijandigheid ten aanzien van politiek impliceert in de bredere filosofie.<a href="#fn:3" id="fnref:3" title="see footnote" class="footnote">3</a> Binnen het politieke spectrum is Arendt evenmin eenvoudig te plaatsen.</p>
+  Ze verzette zich tegen de noemer &#8216;politiek filosoof&#8217;, omdat het een vijandigheid ten aanzien van politiek impliceert in de bredere filosofie.<a href="#fn:3" id="fnref:3" title="see footnote" class="footnote">[3]</a> Binnen het politieke spectrum is Arendt evenmin eenvoudig te plaatsen.</p>
 
 <p>Heidegger leerde Arendt dat denken een manier was van <em>zijn</em>, van mens zijn. Of zoals Lindsey Stonebridge toelicht op <em>In Our Time:</em> </p>
 
 <blockquote>
-<p>&#8220;It means that how you think, is how you exist. Thinking about your existence. (…) You establish yourself in the world through thinking and through language.&#8221;<a href="#fn:1" title="see footnote" class="footnote">1</a> </p>
+<p>&#8220;It means that how you think, is how you exist. Thinking about your existence. (…) You establish yourself in the world through thinking and through language.&#8221;<a href="#fn:1" title="see footnote" class="footnote">[1]</a> </p>
 </blockquote>
 
 <p>Dit brengt het belang van <em>taal</em> met zich mee, wat voor zowel Heidegger als Arendt cruciaal is om <em>iemand te zijn.</em> </p>
@@ -55,7 +55,7 @@ html,body,#wrapper{font-size:10pt}
 <p>Hannah Arendt werd geboren als kind van seculiere joodse ouders. Volgens Arendt werd ze pas met haar &#8216;joods&#8217; zijn geconfronteerd na anti-semitische opmerkingen van kinderen op straat: </p>
 
 <blockquote>
-<p>&#8220;I first met up with it trough anti-Semitic remarks … from children on the street. After that I was, so to speak, &#8216;enlightened&#8217;.&#8221;<a href="#fn:2" title="see footnote" class="footnote">2</a></p>
+<p>&#8220;I first met up with it trough anti-Semitic remarks … from children on the street. After that I was, so to speak, &#8216;enlightened&#8217;.&#8221;<a href="#fn:2" title="see footnote" class="footnote">[2]</a></p>
 </blockquote>
 
 <p>Arendt studeerde reeds vanaf jongs af aan Grieks, een interesse die ze haar leven lang zou bewaren. In 1929 dient ze bij Karl Jaspers te Heidelberg haar proefschrift in over het liefdesbegrip bij Augustinus.
@@ -63,7 +63,7 @@ html,body,#wrapper{font-size:10pt}
 
 <p>Toen ze in Marburg les kreeg van Heidegger ontwikkelde zich een korte maar intense romantische affaire. In 1926 verhuisde ze echter naar Heidelberg om daar in 1929 haar proefschrift af te leggen onder Karl Jaspers. Toen bekend geraakte dat Heidegger op Nationaal Socialistische bijeenkomsten sprak in 1932, was Arendt daar erg van aangedaan. </p>
 
-<p>Na haar dissertatie begon Arendt aan een boek over <em>Rahel Varnhagen: The Life of a Jewess</em>, al zou dat pas bijna twee decennia later worden gepubliceerd. Het gaat om een impressionistische biografie van een schrijfster uit de late 18e eeuw die er ook een invloedrijk salon op nahield. Volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">2</a> was Varnhagen één van Arendt&#8217;s grootste inspiratiebronnen. Net als Rahel werd Hannah van jongs af aan gekenmerkt door een scherpte van geest.</p>
+<p>Na haar dissertatie begon Arendt aan een boek over <em>Rahel Varnhagen: The Life of a Jewess</em>, al zou dat pas bijna twee decennia later worden gepubliceerd. Het gaat om een impressionistische biografie van een schrijfster uit de late 18e eeuw die er ook een invloedrijk salon op nahield. Volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">[2]</a> was Varnhagen één van Arendt&#8217;s grootste inspiratiebronnen. Net als Rahel werd Hannah van jongs af aan gekenmerkt door een scherpte van geest.</p>
 
 <p>Arendts hoop op habilitatie werd verhinderd door haar joodse afkomst. Ze voerde kort onderzoek naar antisemitisme, tot ze in 1933 kort werd opgesloten na arrestatie door de Gestapo.<br/>
   In 1933 werkte Arendt kort voor de Volkerenbond in Genève, nadat ze Duitsland ontvluchtte. Niet veel later kwam ze in Parijs terecht, waar ze bevriend geraakte met Walter Benjamin, een neef van haar eerste man.<br/>
@@ -71,8 +71,9 @@ html,body,#wrapper{font-size:10pt}
 
 <p>In 1941 vluchtte Arendt samen met haar man en moeder via Portugal naar de Verenigde Staten, met behulp van een door een Amerikaans diplomaat onwettig verstrekte visa. In New York maakte ze deel uit van de intellectuele kring rond de <em>Partisan Review</em> en schreef Arendt enkele jaren een vaste column in Duitstalig Joods nieuwsblad <em>Aufbau</em>.<br/>
   In de Verenigde Staten was Arendt zich uitermate bewust van haar status als statenloze vluchteling, onder andere verwerkt in haar essay <em>We refugees</em>. In haar denken en zijn nam ze de positie adopteerde ze haar positie als <em>pariah</em>.<br/>
-  Gedurende de tweede wereldoorlog, werkte Arendt voor een Zionistische organisatie die duizenden joodse kinderen onder wist te brengen in het Britse deel van Palestina.
-  Pas in 1950 verwierf ze de Amerikaanse nationaliteit. In dat jaar kwam ze ook opnieuw in contact met Heidegger, die ze later publiek verdedigde voor diens banden met het Nationaal Socialistische regime, volgens haar te wijten aan naïviteit.<br/>
+  Gedurende de tweede wereldoorlog werkte Arendt voor een Zionistische organisatie die duizenden joodse kinderen onder wist te brengen in het Britse deel van Palestina.</p>
+
+<p>Pas in 1950 verwierf ze de Amerikaanse nationaliteit. In dat jaar kwam ze ook opnieuw in contact met Heidegger, die ze later publiek verdedigde voor diens banden met het Nationaal Socialistische regime, volgens haar te wijten aan naïviteit.<br/>
   In 1959 werd ze de eerste vrouwelijke <em>lecturer</em> aan Princeton. Begin jaren &#8217;60 gaf ze eveneens les aan de <em>University of Chicago</em>, <em>The New School</em>, en <em>Yale University</em>.<br/>
   In 1961 bracht ze voor <em>The New Yorker</em> verslag uit van het process tegen Adolf Eichmann te Jeruzalem, waar ze over de &#8216;banaliteit van het kwaad&#8217; sprak, wat tot groot misbegrip en controverse leidde binnen de Joodse gemeenschap.</p>
 
@@ -80,12 +81,12 @@ html,body,#wrapper{font-size:10pt}
 
 <h3 id="1951theoriginsoftotalitarianism">1951, <em>The Origins of Totalitarianism</em></h3>
 
-<p>Geparafraseerd naar uitleg van Robert Eaglestone in <em>In Our Time</em>.<a href="#fn:1" title="see footnote" class="footnote">1</a></p>
+<p>Geparafraseerd naar uitleg van Robert Eaglestone in <em>In Our Time</em>.<a href="#fn:1" title="see footnote" class="footnote">[1]</a></p>
 
 <p>Een zoektocht naar de kern van het totalitarisme, die volgens Arendt twee elementen omvat: ideologie en terreur.</p>
 
-<p>Het verdwijnen van sociale banden en atomiseren van individuen opent de deur voor een grote leider die de ontstane leemte opvult met een helder antwoord. Resultaat is echter dat er slechts één manier van denken toegelaten wordt.
-  Deze ideologie kan zo sterk zijn, dat mensen afstand nemen wanneer wat de partij zegt eigen ervaring tegenspreekt. Arendt noemt dit <em>rule from within</em>, of een kolonisering van de geest, wat zelf denken verhindert of zelfs voorkomt dat mensen hun eigen ervaringen beleven.</p>
+<p>Het verdwijnen van sociale banden en atomiseren van individuen opent de deur voor een grote leider die de ontstane leemte opvult met een helder antwoord. Resultaat is echter dat er slechts één manier van denken toegelaten wordt.<br/>
+  Deze ideologie kan zo sterk zijn, dat mensen afstand nemen van henzelf, bv. wanneer wat De Partij zegt eigen ervaring tegenspreekt. Arendt noemt dit <em>rule from within</em>, of een kolonisering van de geest, wat zelf denken verhindert of zelfs voorkomt dat mensen hun eigen ervaringen beleven.</p>
 
 <p>Van Aristoteles neemt Arendt de idee dat <em>mens zijn</em> bestaat uit twee delen: een biologisch &amp; lichamelijke dimensie, en een sociale-politieke dimensie of <em>bios</em>. Totalitaire terreur trekt deze elementen van elkaar los: naam, rechten en identiteit worden ontvreemd, waardoor enkel het lichaam overblijft.<br/>
  Eenmaal tot het lichamelijke gereduceerd, wordt de persoon overbodig, waarna het vermoorden probleemloos wordt.</p>
@@ -104,19 +105,19 @@ html,body,#wrapper{font-size:10pt}
 
 <p>…</p>
 
-<p>Arendt schreef met een opvallende ironische toon, volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">2</a> uit noodzaak om zichzelf te distantiëren van Joodse slachtoffers.</p>
+<p>Arendt schreef met een opvallende ironische toon, volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">[2]</a> uit noodzaak zichzelf te distantiëren van Joodse slachtoffers.</p>
 
 <h2 id="arendtoverpolitiek">Arendt over politiek</h2>
 
-<p>Volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">2</a> vertelt <em>Eichman in Jerusalem</em> veel over Arendts opvatting van politiek. Echte politiek, voor Arendt, was een zaak voor getalenteerde individuen, die discussiëren onder voorwaarden van gelijkheid en wederzijds respect. Bovendien moest politiek duidelijk gescheiden worden van het persoonlijke en private. Een soort afstand, of <em>interspace</em> is voorwaarde om aan politiek te kunnen doen.</p>
+<p>Volgens Kirsch<a href="#fn:2" title="see footnote" class="footnote">[2]</a> vertelt <em>Eichman in Jerusalem</em> veel over Arendts opvatting van politiek. Echte politiek, voor Arendt, was een zaak voor getalenteerde individuen, die discussiëren onder voorwaarden van gelijkheid en wederzijds respect. Bovendien moest politiek duidelijk gescheiden worden van het persoonlijke en private. Een soort afstand, of <em>interspace</em> is voorwaarde om aan politiek te kunnen doen.</p>
 
-<p>Punt van kritiek blijft dat in Arendts opvatting politiek een aristocratische aangelegenheid is.<a href="#fn:4" id="fnref:4" title="see footnote" class="footnote">4</a></p>
+<p>Punt van kritiek blijft dat in Arendts opvatting politiek een aristocratische aangelegenheid is.<a href="#fn:4" id="fnref:4" title="see footnote" class="footnote">[4]</a></p>
 
 <p>Opvallender, echter, is Arendts idee over waarom mensen aan politiek doen. Niet om een betere wereld te creëren, zo meent ze, maar omdat mensen graag uitblinken, en een politieke carrière is een manier om respect te winnen.</p>
 
 <h2 id="enkelecitaten">Enkele citaten</h2>
 
-<p>Citaat uit Kirsch&#8217;<a href="#fn:2" title="see footnote" class="footnote">2</a> artikel, daar ingeleid met <em>As she wrote in 1941,</em> </p>
+<p>Citaat uit Kirsch&#8217;<a href="#fn:2" title="see footnote" class="footnote">[2]</a> artikel, daar ingeleid met <em>As she wrote in 1941,</em> </p>
 
 <blockquote>
 <p>&#8220;One truth that is unfamiliar to the Jewish people, though they are beginning to learn it, is that you can only defend yourself as the person you are attacked as. A person attacked as a Jew cannot defend himself as an Englishman or Frenchman. The world would only conclude that he is simply not defending himself.&#8221; </p>
@@ -155,7 +156,7 @@ html,body,#wrapper{font-size:10pt}
 </li>
 
 <li id="fn:4">
-<p>Kirsch<a href="#fn:2" title="see footnote" class="footnote">2</a> verwijst hier naar Richard Wolin die Arendts verlangen <em>polis envy</em> noemt.</p>
+<p>Kirsch<a href="#fn:2" title="see footnote" class="footnote">[2]</a> verwijst hier naar Richard Wolin die Arendts verlangen <em>polis envy</em> noemt.</p>
 </li>
 
 </ol>
